--- a/HTML Dosyası/BSGMakale.html
+++ b/HTML Dosyası/BSGMakale.html
@@ -1,7 +1,6 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
-    BSGMakale
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -29,14 +28,6 @@
             width: 150px;
         }
 
-        .vertical-center {
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-        }
-
     </style>
 </head>
 <body>
@@ -46,7 +37,7 @@
             <div class="col-4">
 
                 <div class="card">
-                    <a onclick="DirectPage(followerId)"><img src="C:\Users\stajyer\Desktop\HTML\resim.jpg" alt="Profil fotosu" style="width:100%;" title="Anasayfa"></a>
+                    <a onclick="DirectPage(followerId)"><img src="C:\Users\HP\Desktop\1Mehmet\HTML\resim.jpg" alt="Profil fotosu" style="width:100%;" title="Anasayfa"></a>
                     <div class="card-body">
                         <a onclick="DirectPage(followerId)" title="Anasayfa"><h5>Mehmet Kemal Aslan </h5></a>
                     </div>
@@ -71,6 +62,9 @@
                 <div class="card mt-2">
                     <div class="row">
                         <div class="col-sm-12" id="account">
+                        </div>
+                        <div class="text-center">
+                            <button type="button" onclick="window.location.href = 'file:///C:/Users/stajyer/Desktop/HTML/BSMakale.html?makaleId=' + articleId ;" class="btn btn-primary btn-sm row-button1 mx-auto mb-3">Çıkış yap</button>
                         </div>
                     </div>
                 </div>
@@ -111,7 +105,7 @@
                     <p>Yorumu silmek istiyor musunuz?</p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="modalSil" onclick="DeleteComment()" data-bs-dismiss="modal">Evet</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Evet</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Hayır</button>
                 </div>
             </div>
@@ -127,54 +121,12 @@
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="yorum-yeni" class="col-form-label">Yorum:</label>
-                        <input type="text" class="form-control" value="eskiyorum" id="yorum-yeni">
+                        <label for="yorum-yeni" class="col-form-label" >Yorum:</label>
+                        <input type="text" class="form-control" id="yorum-yeni">
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="modalKaydet" onclick="SetComment()" data-bs-dismiss="modal">Kaydet</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="modalSetName" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Kullanıcı Ayarları</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="isim-yeni" class="col-form-label">Yeni isim:</label>
-                        <input type="text" class="form-control" id="isim-yeni">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="modalKaydetIsim" onclick="SetName()" data-bs-dismiss="modal">Kaydet</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="modalSetPassword" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Kullanıcı Ayarları</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="sifre-yeni" class="col-form-label">Yeni şifre:</label>
-                        <input type="password" class="form-control" id="sifre-yeni">
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" id="modalKaydetSifre" onclick="SetPassword()" data-bs-dismiss="modal">Kaydet</button>
+                    <button type="button" onclick="SetComment(commentId)" class="btn btn-primary" data-bs-dismiss="modal">Kaydet</button>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Kapat</button>
                 </div>
             </div>
@@ -187,6 +139,7 @@
     <script>
 
         function CommentAdd(articleId, followerId) {
+            //$.getJSON("https://localhost:44374/api/AccountPage?followerId=" + followerId, function (data) {
 
             var Ucomment = document.getElementById("UComment").value;
             var followerId = getParameterByName("followerId");
@@ -213,16 +166,18 @@
             });
 
             commentList(articleId);
+            //window.location.reload();
+            //})
         }
 
         var articleId = "";
         var followerId = "";
-
+       
 
         $(document).ready(function () {
             articleId = getParameterByName("makaleId");
             var followerId = getParameterByName("followerId");
-
+            
             categoryList(followerId);
             tagList(followerId);
             accountPage(followerId);
@@ -232,6 +187,7 @@
 
 
         function getParameterByName(name, url = window.location.href) {
+            console.log(url);
             name = name.replace(/[\[\]]/g, '\\$&');
             var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
                 results = regex.exec(url);
@@ -264,11 +220,11 @@
             $.getJSON("https://localhost:44374/api/GetArticle?articleId=" + articleId, function (data) {
                 var html = "";
                 html += `<div class="card mb-3 p-2">
-                                            <h5 class="card-title">` + data.title + `</h5>
-                                            <p class="card-subtitle mb-2 text-muted">` + data.date + `</p>
-                                            <h6 class="card-subtitle mb-2 text-muted">` + data.category + `</h6>
-                                            <p class="card-text">` + data.body + `</p>
-                                        </div>`
+                                    <h5 class="card-title">` + data.title + `</h5>
+                                    <p class="card-subtitle mb-2 text-muted">` + data.date + `</p>
+                                    <h6 class="card-subtitle mb-2 text-muted">` + data.category + `</h6>
+                                    <p class="card-text">` + data.body + `</p>
+                                </div>`
 
                 document.getElementById("makale").innerHTML = html;
             });
@@ -282,69 +238,44 @@
                     html += `<div class="card mb-3 p-2">`
                     if (data[i].commenterId == followerId) {
                         html += `<div class="dropdown">
-                                        <button class="fa fa-ellipsis-v btn btn-warning btn-sm position-absolute top-0 end-0" type="button"  id="data[i].commentId" data-bs-toggle="dropdown" aria-expanded="false">
-                                        </button>
-                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal1" data-bs-whatever="@mdo" onclick="OldComment(`+ data[i].commentId + `)" type="button" href="#">Değiştir</a></li>
-                                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo" onclick="OldComment(`+ data[i].commentId + `)" href="#">Sil</a></li>
-                                        </ul>
-                                    </div>`
+                                    <button class="fa fa-ellipsis-v btn btn-warning btn-sm position-absolute top-0 end-0" type="button" id="data[i].commentId" data-bs-toggle="dropdown" aria-expanded="false">
+                                          </button>
+                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal1" data-bs-whatever="@mdo" href="#">Değiştir</a></li>
+                                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo" href="#">Sil</a></li>
+                                    </ul>
+                                </div>`
                     }
                     html += `<h5 class="card-title">` + data[i].userName + `</h5>
-                                            <p class="card-subtitle mb-2 text-muted">` + data[i].userMail + `</p>
-                                            <h6 class="card-subtitle mb-2 text-muted">` + data[i].comDate + `</h6>
-                                            <p class="card-text">` + data[i].userComment + `</p>
-                                        </div>`
+                                        <p class="card-subtitle mb-2 text-muted">` + data[i].userMail + `</p>
+                                        <h6 class="card-subtitle mb-2 text-muted">` + data[i].comDate + `</h6>
+                                        <p class="card-text">` + data[i].userComment + `</p>
+                                    </div>`
                 }
                 document.getElementById("yorum").innerHTML = html;
             });
         }
 
         function accountPage(followerId) {
-            var articleId = getParameterByName("makaleId");
             $.getJSON("https://localhost:44374/api/AccountPage?followerId=" + followerId, function (data) {
                 var html = "";
-                html += `<div align="center" class="card p-2">
-                            <div class="row">
-                                <div class="col-3">
-                                    <img src="C:\\Users\\stajyer\\Desktop\\HTML\\resim1.jpg" alt="Profil fotosu" style="width:100%;">
-                                </div>
-                                <div class="col-9">
-                                    <button class="fa fa-user-cog btn btn-secondary btn-sm position-absolute top-1 end-0 mt-1" type="button" id="ModalSettings" data-bs-toggle="dropdown" aria-expanded="false">
-                                    </button>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalSetName" type="button" href="#">İsim değiştir</a></li>
-                                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalSetPassword" href="#">Şifre değiştir</a></li>
-                                        <li><a class="dropdown-item" href = 'file:///C:/Users/stajyer/Desktop/HTML/BSAnasayfa.html'` + articleId + `;">Çıkış yap</a></li>
-                                    </ul>
-                                    <h4 class="vertical-center card-title">` + data.userName + `</h4>
-                                </div>
-                            </div>
-                        </div>`
+                html += `<div align="center" class="card mb-3 p-2">
+                                    <h4 class="card-title">` + data.userName + `</h4>
+                                </div>`
+
                 document.getElementById("account").innerHTML = html;
             });
         }
 
         function DirectPage(followerId) {
             var followerId = getParameterByName("followerId");
-            location.href = "file:///C:/Users/stajyer/Desktop/HTML/BSGAnasayfa.html?followerId=" + followerId;
+            location.href = "file:///C:/Users/HP/Desktop/1Mehmet/HTML/BSGAnasayfa.html?followerId=" + followerId;
         }
 
-        function OldComment(commentId) {
-            $.getJSON("https://localhost:44374/api/CommentList?articleId=" + articleId, function (data) {
-                for (var i = 0; i < data.length; i++) {
-                    if (data[i].commentId == commentId) {
-                        document.getElementById("yorum-yeni").value = data[i].userComment;
-                        document.getElementById("modalKaydet").value = commentId;
-                        document.getElementById("modalSil").value = commentId;
-                    }
-                }
-            })
-        };
-
-        function SetComment() {
+        function SetComment(commentId) {
             var yeniyorum = document.getElementById("yorum-yeni").value;
-            var commentId = document.getElementById("modalKaydet").value;
+            commentId = getParameterByName("commentId");
+            console.log("ABC123ABC", yeniyorum, commentId);
 
             var json = { newComment: yeniyorum, yorum_Id: commentId }
             $.ajax({
@@ -360,63 +291,11 @@
                 contentType: "application/json",
                 dataType: 'json'
             });
+            commentList(articleId);
         }
 
         function DeleteComment() {
-            var commentId = document.getElementById("modalSil").value;
 
-            $.getJSON("https://localhost:44374/api/DeleteComment?commentId=" + commentId, function (data) {
-                $.ajax({
-                    success: function () {
-                        alert("Yorum silindi.");
-                    },
-                    complete: function (data) {
-                        commentList(articleId);
-                    }
-                });
-            })
-        }
-
-        function SetName() {
-            var yeniisim = document.getElementById("isim-yeni").value;
-            var nameId = getParameterByName("followerId");
-            console.log("isim: ",yeniisim,"  Id: ", nameId)
-
-            var json = { newName: yeniisim, userId: nameId }
-            $.ajax({
-                type: 'POST',
-                url: 'https://localhost:44374/api/SetName',
-                data: JSON.stringify(json), // or JSON.stringify ({name: 'jonas'}),
-                success: function () {
-                    alert("İsim değiştirildi.");
-                },
-                complete: function (data) {
-                    window.location.reload();
-                },
-                contentType: "application/json",
-                dataType: 'json'
-            });
-        }
-
-        function SetPassword() {
-            var yenisifre = document.getElementById("sifre-yeni").value;
-            var nameId = getParameterByName("followerId");
-            console.log("isim: ", yenisifre, "  Id: ", nameId)
-
-            var json = { newPassword: yenisifre, userId: nameId }
-            $.ajax({
-                type: 'POST',
-                url: 'https://localhost:44374/api/SetPassword',
-                data: JSON.stringify(json), // or JSON.stringify ({name: 'jonas'}),
-                success: function () {
-                    alert("Şifre değiştirildi.");
-                },
-                complete: function (data) {
-                    window.location.reload();
-                },
-                contentType: "application/json",
-                dataType: 'json'
-            });
         }
 
     </script>
