--- a/HTML Dosyası/BSAnasayfa.html
+++ b/HTML Dosyası/BSAnasayfa.html
@@ -1,7 +1,6 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
-    BSAnasayfa
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -32,9 +31,9 @@
             <div class="col-4">
 
                 <div class="card">
-                    <a href="file:///C:/Users/stajyer/Desktop/HTML/BSAnasayfa.html"><img src="C:\Users\stajyer\Desktop\HTML\resim.jpg" alt="Profil fotosu" style="width:100%;" title="Anasayfa"></a>
+                    <a href="file:///C:/Users/HP/Desktop/1Mehmet/HTML/BSAnasayfa.html"><img src="C:\Users\HP\Desktop\1Mehmet\HTML\resim.jpg" alt="Profil fotosu" style="width:100%;" title="Anasayfa"></a>
                     <div class="card-body ">
-                        <a href="file:///C:/Users/stajyer/Desktop/HTML/BSAnasayfa.html" title="Anasayfa"><h5>Mehmet Kemal Aslan </h5></a>
+                        <a href="file:///C:/Users/HP/Desktop/1Mehmet/HTML/BSAnasayfa.html" title="Anasayfa"><h5>Mehmet Kemal Aslan </h5></a>
                     </div>
                 </div>
 
@@ -168,7 +167,7 @@
                                         <p class="card-subtitle mb-2 text-muted">` + data[i].date + `</p>
                                         <h6 class="card-subtitle mb-2 text-muted">` + data[i].category + `</h6>
                                         <p class="card-text">` + data[i].summary + `</p>
-                                        <a href="file:///C:/Users/stajyer/Desktop/HTML/BSMakale.html?makaleId=`+ data[i].id + `" class="card-link" style="color:blue;">Deavmını oku</a>
+                                        <a href="file:///C:/Users/HP/Desktop/1Mehmet/HTML/BSMakale.html?makaleId=`+ data[i].id + `" class="card-link" style="color:blue;">Deavmını oku</a>
                                     </div>`
                 }
                 document.getElementById("makale").innerHTML = html;
@@ -228,7 +227,7 @@
                 }
                 if (data.mailCount == 1) {
                     console.log("ABC", abc);
-                    location.href = "file:///C:/Users/stajyer/Desktop/HTML/BSGAnasayfa.html?followerId=" + data.followerId;
+                    location.href = "file:///C:/Users/HP/Desktop/1Mehmet/HTML/BSGAnasayfa.html?followerId=" + data.followerId;
                     return;
                 }
             });
